--- a/shippable.yml
+++ b/shippable.yml
@@ -7,6 +7,7 @@ python:
 
 build:
   ci:
+    - pip install --upgrade pip
     - pip install .
     - pip install -r requirements-dev.txt
     - pip install pytest-cov
